--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
           <h2>Teenagers going through tough stuff</h2>
         </header>
 
+        <p>Teenagers are often diagnose with depression because
+          
+        
         <section id="downloads" class="clearfix">
           <a href="https://github.com/Chocolate6/Teen-Depression/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
           <a href="https://github.com/Chocolate6/Teen-Depression/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
