--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <h3>
 <a id="Teenager Problems" class="anchor" href="Most teenagers problems are Bulllying " aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Teenagers my age are bullied and most of the teenagers suffered of depression beacuse of that. They feel alone and they lose connection with their family an friends.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>Teens and most of the teenagers suffered of depression beacuse of that. They feel alone and they lose connection with their family an friends.<a href="https://guides.github.com/features/mastering-markdown/">Teens that are depressed turn selfish and they comitt suicide</a>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
