--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <section id="main_content">
           <h3>
-<a id="Teenager Problems" class="anchor" href="Most teenagers problems are Bulllying " aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Teenagers my age are bullied and most of the teenagers suffered of depression beacuse of that. They feel alone and they lose connection with their family an friends.</h3>
+<a id="Teenager Problems" class="anchor" href="Most teenagers problems are Bulllying " aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Teenagers my age are bullied</h3>
 
 <p>Teens and most of the teenagers suffered of depression beacuse of that. They feel alone and they lose connection with their family an friends.<a href="https://guides.github.com/features/mastering-markdown/">Teens that are depressed turn selfish and they comitt suicide</a>
 
