--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
           <h3>
 <a id="Teenager Problems" class="anchor" href="Most teenagers problems are Bulllying " aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Teenagers my age are bullied</h3>
 
-<p>Teens and most of the teenagers suffered of depression beacuse of that. They feel alone and they lose connection with their family an friends.<a href="https://guides.github.com/features/mastering-markdown/">Teens that are depressed turn selfish and they comitt suicide</a>
+<p>Teens and most of the teenagers suffered of depression beacuse of that. They feel alone and they lose connection with their family an friends.<a href="https://guides.github.com/features/mastering-markdown/">Teens that are depressed turn selfish and then comitt suicide</a>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="Drinking Problems" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>When teenagers want to forget about family problems they would go sneak out and go to parties to forget about the problem and start drinking with friends. After times like that teenagers become alcholics.</p>
 
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
