--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 <p>Teens and most of the teenagers suffered of depression beacuse of that. They feel alone and they lose connection with their family an friends.<a href="https://guides.github.com/features/mastering-markdown/">Teens that are depressed turn selfish and then comitt suicide</a>
 
 <h3>
-<a id="Drinking Problems" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="Drinking Problems" class="anchor" href="Drinking Problems" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Alchol</h3>
 
-<p>When teenagers want to forget about family problems they would go sneak out and go to parties to forget about the problem and start drinking with friends. After times like that teenagers become alcholics.</p>
+<p>When teenagers want to forget about family problems they would go sneak out and go to parties to forget about the problem and start drinking with friends. After times like that teenagers become<a href="https://guides.github.com/features/mastering-markdown/"> alcholics.</a>
 
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
