--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div id="container">
       <div class="inner">
-
+    <body>{background-color:#800000;}
         <header>
           <h1>Teen-depression</h1>
           <h2>Teenagers going through tough stuff</h2>
