--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <p>When teenagers want to forget about family problems they would go sneak out and go to parties to forget about the problem and start drinking with friends. After times like that teenagers become<a href="https://guides.github.com/features/mastering-markdown/"> alcholics.</a>
 
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Teenager and problems with Family</h3>
+<a id="Some people lose family members ore friends that mean alot to them" class="anchor" href="#Family members" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Teenager and problems with Family</h3>
 
 <p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
 
