--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
 <h3>
 <a id="Some people lose family members ore friends that mean alot to them" class="anchor" href="#Family members" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Teenager and problems with Family</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>People that lose family members or a friend get into a deep depression, for teenagers this would be the most hardest time that teens will go through. They would lose interest in social life and lock themselves out. They would pretend that they are o.k so they wont let other know that they are really hurt. </p>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="Teen-relationships" class="anchor" href="Teen- Relationships" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a> 1 major teenanger problem would be realtionships.</h3>
 
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p> Many teenagers plan on finding someone to spend their rest of their life with. Mostly teenagers that are the age of 15-17 are finding a relationship. </p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
