--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <h3>
 <a id="Drinking Problems" class="anchor" href="Drinking Problems" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Alchol & teens</h3>
 
-<p>When teenagers want to forget about family problems they would go sneak out and go to parties to forget about the problem and start drinking with friends. After times like that teenagers become<a href="https://guides.github.com/features/mastering-markdown/"> alcholics.</a>
+<p>When teenagers want to forget about family problems they would go sneak out and go to parties to forget about the problem and start drinking with friends. After times like that teenagers become<a href="https://guides.github.com/features/mastering-markdown/"> alcholics.</a> <p>When teenagers are alcholics they would mostly drop out of school and never focus they would make bad decisions and regret the decisions that they had made.</p>
 
 <h3>
 <a id="Some people lose family members ore friends that mean alot to them" class="anchor" href="#Family members" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Teenager and problems with Family</h3>
