--- a/index.html
+++ b/index.html
@@ -41,22 +41,22 @@
 <h3>
 <a id="Drinking Problems" class="anchor" href="Drinking Problems" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Alchol & teens</h3>
 
-<p>When teenagers want to forget about family problems they would go sneak out and go to parties to forget about the problem and start drinking with friends. After times like that teenagers become<a href="https://guides.github.com/features/mastering-markdown/"> alcholics.</a> <p>When teenagers are alcholics they would mostly drop out of school and never focus they would make bad decisions and regret the decisions that they had made.</p>
+<p>When teenagers want to forget about family problems they would go sneak out and go to parties to forget about the problem and start drinking with friends. After times like that teenagers become<a href="https://guides.github.com/features/mastering-markdown/"> alcholics.</a>When teenagers are alcholics they would mostly drop out of school and never focus they would make bad decisions and regret the decisions that they had made. Its hard for teenageers to get focused if they are into drinking more than studying.</p>
 
 <h3>
 <a id="Some people lose family members ore friends that mean alot to them" class="anchor" href="#Family members" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Teenager and problems with Family</h3>
 
-<p>People that lose family members or a friend get into a deep depression, for teenagers this would be the most hardest time that teens will go through. They would lose interest in social life and lock themselves out. They would pretend that they are o.k so they wont let other know that they are really hurt. </p>
+<p>People that lose family members or a friend get into a deep depression, for teenagers this would be the most hardest time that teens will go through. They would lose interest in social life and lock themselves out. They would pretend that they are o.k so they wont let other know that they are really hurt.  </p>
 
 <h3>
 <a id="Teen-relationships" class="anchor" href="Teen- Relationships" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a> 1 major teenanger problem would be realtionships.</h3>
 
-<p> Many teenagers plan on finding someone to spend their rest of their life with. Mostly teenagers that are the age of 15-17 are finding a relationship. </p>
+<p> Many teenagers plan on finding someone to spend their rest of their life with. Mostly teenagers that are the age of 15-17 are finding a relationship. Being in relationship at a young age is not a good idea beacuse it can lead to heart break,trust issues and more likely depression. Many plan to make their relationship last forever while many cheat a break a girl or guy´s  heart.</p>
 
 <h3>
 <a id="Moving into new homes to a new state." class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Moving to a new state is exciting but for a teen they will have to leave friends, break up with their girlfriend or boyfriend,its really hard to let memories of the people that you once knew go away.  .</p>
+<p>Moving to a new state is exciting but for a teen they will have to leave friends, break up with their girlfriend or boyfriend,its really hard to let memories of the people that you once knew go away. Going to a new school is the biggest problem of moving because they will have to make new friends and know other people. It will be hard to get comftorable but they have to get use to the change.</p>
         </section>
 
         <footer>
