--- a/index.html
+++ b/index.html
@@ -52,7 +52,16 @@
 <a id="Teen-relationships" class="anchor" href="Teen- Relationships" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a> 1 major teenanger problem would be realtionships.</h3>
 
 <p> Many teenagers plan on finding someone to spend their rest of their life with. Mostly teenagers that are the age of 15-17 are finding a relationship. Being in relationship at a young age is not a good idea beacuse it can lead to heart break,trust issues and more likely depression. Many plan to make their relationship last forever while many cheat a break a girl or guy´s  heart.</p>
+<!DOCTYPE html>
+<html>
+<body>
 
+<h2>Spectacular Mountain</h2>
+<img src="pic_mountain.jpg" alt="Mountain View" style="width:304px;height:228px;">
+
+</body>
+</html>
+          
 <h3>
 <a id="Moving into new homes to a new state." class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
 
