--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </html>
           
 <h3>
-<a id="Moving into new homes to a new state." class="anchor" href="" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>MOving to a new state</h3>
+<a id="Moving into new homes to a new state." class="anchor" href="" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Moving to a new state</h3>
 
 <p>Moving to a new state is exciting but for a teen they will have to leave friends, break up with their girlfriend or boyfriend,its really hard to let memories of the people that you once knew go away. Going to a new school is the biggest problem of moving because they will have to make new friends and know other people. It will be hard to get comftorable but they have to get use to the change.</p>
         </section>
